--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Christmas Tree</title>
-    <link rel="stylesheet" href="tree.css">
+    <title>CSS Snowman and Christmas Tree</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="snowman">
